# pharmacy_bot

./: CMakeLists.txt  build_vector_db.py  package.xml  setup.cfg  setup.py
launch/: pharmacy_system.launch.py
pharmacy_bot/: detector.py  pharmacy_gui.py  pharmacy_manager.py  robot_arm.py  symptom_matcher.py  symptom_matcher_test.py  symptom_subscriber_test.py  voice_and_match_test.py  voice_input.py
pharmacy_bot/robot_control/: onrobot.py
resource/: symptom_query.txt
resource/chroma_db/: chroma.sqlite3
srv/: PickupMedicine.srv  SrvDepthPosition.srv
