<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pharmacy_bot</name>
  <version>0.0.1</version>
  <description>Voice-controlled pharmacy assistant robot with arm and object detection</description>
  <maintainer email="choin22222@naver.com">choin</maintainer>
  <license>TODO: License declaration</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 빌드 의존성 -->
  <build_depend>rclpy</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- 실행 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- 서비스 생성을 위한 종속성 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Python 관련 (선택) -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
